--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.2",
+    "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.10.3",
     "react-native-maps": "^0.14.0",
+    "react-native-menu": "^0.20.2",
     "react-native-vector-icons": "^4.0.1",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7"
   },
